--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>vai ser uma imagem</h1>
-</body>
-</html>
+    <header>
+    <img src="alurastart logo.png" alt="">
+    <ul>
+        <li>escola</li>
