--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <header>
-    <img src="alurastart logo.png" alt="">
+        <img class="cabecario_image" src="alurastart logo.png" alt="logo da alurastart">
     <ul>
         <li>escola</li>
+        <li>estudante</li>
+        </ul>
+    <header>
+
+</body>
+</html>
