--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img class="cabecario_image" src="alurastart logo.png" alt="logo da alurastart">
-    <ul>
+    <header class="cabecalho"> 
+        <img class="cabecalho_image" src="alurastart logo.png" alt="logo da alurastart">
+    <ul class="cabecalho-lista"> 
         <li>escola</li>
         <li>estudante</li>
         </ul>
