--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="cabecalho"> 
-        <img class="cabecalho_image" src="alurastart logo.png" alt="logo da alurastart">
-    <ul class="cabecalho-lista item"> 
-    <ul class="cabecalho-lista item">
+    <header>
+     <h1>vai ser uma imagem</h1>
+     </ul>
         <li>escola</li>
         <li>estudante</li>
-        </ul>
-    <header>
-
-</body>
-</html>
+     </ul>
+    </header>
+<selection class="escola"
+    <h2 class="escola-titulo">sobre escola</h2>
+    <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de Pensamento Computacional atraves da Programação</p>
+    <p class="escola-texto-dois">A turma mais famosa e a segunda SErie A.  Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelente.</p>
+      <img src="Larning-pana.png" alt="manina estudando">
+</selection>
+<selection class="estudante"
+      <img class="escola-imagem"src="Teaching-amico.png" alt="professora"
+    </selection>
+    <selection class="estudante"
+    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    <img class="estudante" src=""
