--- a/index.html
+++ b/index.html
@@ -2,27 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=h1, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-     <h1>vai ser uma imagem</h1>
-     </ul>
-        <li>escola</li>
-        <li>estudante</li>
-     </ul>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="alurastart logo.png" alt="Logo da alura start">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
+        </ul>
     </header>
-<selection class="escola"
-    <h2 class="escola-titulo">sobre escola</h2>
-    <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de Pensamento Computacional atraves da Programação</p>
-    <p class="escola-texto-dois">A turma mais famosa e a segunda SErie A.  Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelente.</p>
-      <img src="Larning-pana.png" alt="manina estudando">
-</selection>
-<selection class="estudante"
-      <img class="escola-imagem"src="Teaching-amico.png" alt="professora"
-    </selection>
-    <selection class="estudante"
-    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-    <img class="estudante" src=""
+    <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre Escola</h2>
+            <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
+            <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+        </div>
+        <img class="escola-imagem" src="Teaching-amico.png" alt="Professora explicando conteúdo">
+    </section>
+    <section class="estudante">
+      <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+      <div class="estudante-div">
+        <img class="estudante-imagem" src="luana.jpg" alt="Foto da luana">
+        <h3 class="estudante-nome">luana</h3>
+        <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
+        <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+        <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
+    </div>
+    </section>
+</body>
+</html>
