--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
     </section>
     <section class="estudante">
       <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+      <div class="estudante-todos">
       <div class="estudante-div">
+        <img class="estudante-imagem" src="luana.jpg" alt="Foto da luana">
+        <h3 class="estudante-nome">luana</h3>
+        <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
+        <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+        <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
+    </div>
+    <div class="estudante-div">
         <img class="estudante-imagem" src="luana.jpg" alt="Foto da luana">
         <h3 class="estudante-nome">luana</h3>
         <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
