--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         <img class="estudante-icone" src="github.png" alt="Imagem do Github">
         <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
     </div>
+    <span></span>
+    <span></span>
     <div class="estudante-div">
         <img class="estudante-imagem" src="luana.jpg" alt="Foto da luana">
         <h3 class="estudante-nome">luana</h3>
