--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <h3 class="estudante-nome">luana</h3>
         <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
         <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+        <a href="https://github.com/Moreninha123"></a>
         <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
     </div>
     <div class="estudante-div">
@@ -38,6 +39,7 @@
         <h3 class="estudante-nome">luana</h3>
         <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
         <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+        <a href="https://github.com/Moreninha123"></a>
         <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
     </div>
     <div class="estudante-div">
@@ -45,6 +47,7 @@
         <h3 class="estudante-nome">luana</h3>
         <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
         <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+        <a href="https://github.com/Moreninha123"></a>
         <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
     </div>
     <span></span>
@@ -54,6 +57,7 @@
         <h3 class="estudante-nome">luana</h3>
         <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
         <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+        <a href="https://github.com/Moreninha123"></a>
         <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
     </div>
     <div class="estudante-div">
@@ -61,6 +65,7 @@
         <h3 class="estudante-nome">luana</h3>
         <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
         <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+        <a href="https://github.com/Moreninha123">
         <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
     </div>
     <div class="estudante-div">
@@ -68,6 +73,7 @@
         <h3 class="estudante-nome">luana</h3>
         <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
         <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+        <a href="https://github.com/Moreninha123"></a>
         <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
     </div>
     </div>
